tests/test_assets/semantic/invalid/declarations/typed_initializer_mismatch.cog
bad_float_assignment: i64 = 3.14;