tests/test_assets/semantic/invalid/declarations/typed_initializer_mismatch.expected
semantic error at line 1: initializer type does not match declared type
1 semantic error generated.
